# InveStar

./: .env.example  .gitignore  CURSOR_PROJECT_SUMMARY.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_SETUP.md  GITHUB_UPLOAD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INVESTAR_AUTOMATION_PLAYBOOK.md  InveStar SCF ARCHITECTURE.html  InveStar_Stellar_Wallet_KYC.html  InveStar_Stellar_Wallet_KYC.pdf.md  LICENSE  MOBILE_ASSETS_GUIDE.md  MONEYGRAM_SETUP.md  OMS_API_INTEGRATION.md  OMS_LOGIN_INTEGRATION.md  README.md  SECURITY.md  WATCHLIST_DOCUMENTATION.md  WEBSITE_ANALYSIS.md  bun.lockb  capacitor.config.ts  docker-compose.yml  env.example  generate-pdf.js  generate_pdf.py  index.html  index.tsx  investar-app-key.jks  investar-flowchart.html  money-flow.html  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  remittance-flowchart.html  stellar-wallet-guide.html  tailwind.config.js  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
InvestarBD-Mobile/: App.tsx  PROJECT_SUMMARY.md  README.md  app.json  package-lock.json  package.json
Pages/: index.tsx
android/: .gitignore
android/app/: build.gradle
app/: layout.tsx  page.tsx
components/: FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  MoneyGramRamps.tsx  Navigation.tsx  SEO.tsx  SendPayment.tsx  WalletCard.tsx
contracts/: README.md
contracts/investar_remit/: Cargo.toml  (+2 more)
investarbd-app/: App.js  README.md  app.json  capacitor.config.json  package-lock.json  package.json  settings.gradle.kts
pages/: index.tsx
src/: App.tsx  index.css
supabase/: config.toml
(+215 files in other folders)
